--- a/MrsDugan/DigraphSpinner.html
+++ b/MrsDugan/DigraphSpinner.html
@@ -13,7 +13,7 @@
 				display: inline-block;
 				text-align: left;
 				margin: 10px;
-				font-family: "Comic Sans MS", "Comic Sans", cursive;
+				font-family: "Comic Sans MS", "Comic Sans";
 				padding-left: 10px;
 				padding-right: 10px;
 			}
