--- a/MrsDugan/DigraphSpinner.html
+++ b/MrsDugan/DigraphSpinner.html
@@ -7,7 +7,7 @@
 		<style>
 			@font-face {
 				font-family: 'Comic Sans MS';
-				src: url("fonts/COMIC.ttf");
+				src: url("fonts/COMIC.TTF");
 			}
 
 			.spinner {
