Added CarRace to ToC

--- a/MrsDugan/activities.html
+++ b/MrsDugan/activities.html
@@ -18,6 +18,7 @@
 			<li><a href="DiceAddition.html">Dice Addition</a></li>
 			<li><a href="DigraphSpinner.html">Digraph Spinner</a></li>
 			<li><a href="DiceSubtraction.html">Dice Subtraction</a></li>
+			<li><a href="CarRace.html">Car Race</a></li>
 		</ol>
 	</body>
 </html>
