--- a/MrsDugan/CarRace.html
+++ b/MrsDugan/CarRace.html
@@ -4,6 +4,7 @@
 		<script src="../js/jquery-3.5.0.min.js"></script>
 		<script src="../js/jquery-ui-1.12.1/jquery-ui.min.js"></script>
 		<script src="js/jquery-ui-slider-pips.js"></script>
+		<script src="js/jquery-ui-touch-punch.min.js"></script>
 		<link rel="stylesheet" href="css/jquery-ui-slider-pips.css" />
 		<link rel="stylesheet" href="../js/jquery-ui-themes-1.12.1/themes/flick/jquery-ui.css" />
 		<link rel="stylesheet" href="../js/jquery-ui-themes-1.12.1/themes/flick/theme.css" />
