Added rolling dice adition game and added it to the index.

--- a/MrsDugan/activities.html
+++ b/MrsDugan/activities.html
@@ -19,6 +19,7 @@
 			<li><a href="DigraphSpinner.html">Digraph Spinner</a></li>
 			<li><a href="DiceSubtraction.html">Dice Subtraction</a></li>
 			<li><a href="CarRace.html">Car Race</a></li>
+			<li><a href="RollAndRecordAddition.html">Roll and Record Addition</a></li>
 		</ol>
 	</body>
 </html>
