--- a/MrsDugan/activities.html
+++ b/MrsDugan/activities.html
@@ -20,6 +20,7 @@
 			<li><a href="DiceSubtraction.html">Dice Subtraction</a></li>
 			<li><a href="CarRace.html">Car Race</a></li>
 			<li><a href="RollAndRecordAddition.html">Roll and Record Addition</a></li>
+			<li><a href="WheelSpinner.html">Spin a Number</a></li>
 		</ol>
 	</body>
 </html>
