Added roll and record addition with dice.

--- a/MrsDugan/activities.html
+++ b/MrsDugan/activities.html
@@ -21,6 +21,7 @@
 			<li><a href="CarRace.html">Car Race</a></li>
 			<li><a href="RollAndRecordAddition.html">Roll and Record Addition</a></li>
 			<li><a href="WheelSpinner.html">Spin a Number</a></li>
+			<li><a href="RollAndRecordAdditionWithDice.html">Roll and Record Addition with Dice</a></li>
 		</ol>
 	</body>
 </html>
