Added ten frame with a spinner.

--- a/MrsDugan/activities.html
+++ b/MrsDugan/activities.html
@@ -22,6 +22,7 @@
 			<li><a href="RollAndRecordAddition.html">Roll and Record Addition</a></li>
 			<li><a href="WheelSpinner.html">Spin a Number</a></li>
 			<li><a href="RollAndRecordAdditionWithDice.html">Roll and Record Addition with Dice</a></li>
+			<li><a href="TenFrameSpinner.html">Ten Frame with Spinner</a></li>
 		</ol>
 	</body>
 </html>
