--- a/MrsDugan/TenFrameSpinner.html
+++ b/MrsDugan/TenFrameSpinner.html
@@ -177,16 +177,17 @@
 			}
             
             const sectors = [
-              {color:"#f82", label:"1"},
-              {color:"#0bf", label:"2"},
-              {color:"#fb0", label:"3"},
-              {color:"#0fb", label:"4"},
-              {color:"#b0f", label:"5"},
-              {color:"#f82", label:"6"},
-              {color:"#0bf", label:"7"},
-              {color:"#fb0", label:"8"},
-              {color:"#0fb", label:"9"},
-              {color:"#b0f", label:"10"}
+              {color:"#f82", label:"10"},
+              {color:"#0bf", label:"11"},
+              {color:"#fb0", label:"12"},
+              {color:"#0fb", label:"13"},
+              {color:"#b0f", label:"14"},
+              {color:"#af1", label:"15"},
+              {color:"#f82", label:"16"},
+              {color:"#0bf", label:"17"},
+              {color:"#fb0", label:"18"},
+              {color:"#0fb", label:"19"},
+              {color:"#b0f", label:"20"}
             ];
 
             const rand = (m, M) => Math.random() * (M - m) + m;
