Added the train game.

--- a/MrsDugan/activities.html
+++ b/MrsDugan/activities.html
@@ -23,6 +23,7 @@
 			<li><a href="WheelSpinner.html">Spin a Number</a></li>
 			<li><a href="RollAndRecordAdditionWithDice.html">Roll and Record Addition with Dice</a></li>
 			<li><a href="TenFrameSpinner.html">Ten Frame with Spinner</a></li>
+			<li><a href="GrowingTrainGame.html">Growing Train Game</a></li>
 		</ol>
 	</body>
 </html>
