Updated activites.html with plus/minus

--- a/MrsDugan/activities.html
+++ b/MrsDugan/activities.html
@@ -24,6 +24,7 @@
 			<li><a href="RollAndRecordAdditionWithDice.html">Roll and Record Addition with Dice</a></li>
 			<li><a href="TenFrameSpinner.html">Ten Frame with Spinner</a></li>
 			<li><a href="GrowingTrainGame.html">Growing Train Game</a></li>
+			<li><a href="PlusMinusDice.html">Just Plus/Minus Dice</a></li>
 		</ol>
 	</body>
 </html>
