--- a/MrsDugan/DiceSubtraction.html
+++ b/MrsDugan/DiceSubtraction.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script type="text/javascript" src="../js/jquery-3.5.0.min.js"></script>
+    <script src="../js/jquery-3.5.0.min.js"></script>
+    <script src="../js/jquery-ui-1.12.1/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="../js/jquery-ui-themes-1.12.1/jquery-ui.min.css">
 		<script>
 			function throwdice(){
 				var randomdice1=Math.round(Math.random()*6);
@@ -82,9 +84,30 @@
 			#scoreboard2 td.on {
 				background-color: blue;
 			}
+            #directions {
+                position: absolute;
+                top: 10;
+                left: 10;
+            }
+            #directions, #directions:visited {
+                color: blue;
+            }
+            #directions:hover {
+                text-decoration: underline;
+                cursor: pointer;
+            }
 		</style>
 	</head>
 	<body>
+      <a id="directions">Directions</a>
+      <div id="instructions" title="Instructions">
+          <ol>
+            <li>Player 1 rolls the dice and subtracts the numbers (remember the larger number always goes first). Write the number sentence on your whiteboard.</li>
+            <li>Then player 2 rolls and does the same thing.</li>
+            <li>The player with the bigger difference wins the round and marks a space on the ten frame.</li>
+            <li>Play until someone fills their ten frame. Then you can reset and play again!</li>
+          </ol>
+      </div>
 		<center>
 			<div id="main" style="margin-top:20px;padding:50px;">
 				<div>
@@ -160,5 +183,18 @@
 			setClickHandler(document.getElementById("scoreboard1"));
 			setClickHandler(document.getElementById("scoreboard2"));
 		</script>
+    <script>
+      $('#instructions').dialog({
+          autoOpen: false,
+          modal: true,
+          open: function(event, ui) {
+              $('.ui-widget-overlay').css({ opacity: '.8' });
+          }
+      });
+      $( "#directions" ).on( "click", function() {
+        $( "#instructions" ).dialog( "open" );
+      });
+      $('#instructions').dialog();
+    </script>
 	</body>
 </html>
