--- a/PhotoHunt/index.html
+++ b/PhotoHunt/index.html
@@ -50,14 +50,12 @@
             <div class="game-area" id="game-area" style="display: none;">
                 <div class="image-container">
                     <div class="image-wrapper">
-                        <h3>Original</h3>
                         <div class="image-holder">
                             <img id="original-image" src="" alt="Original Image">
                             <svg class="overlay" id="original-overlay"></svg>
                         </div>
                     </div>
                     <div class="image-wrapper">
-                        <h3>Find the Differences</h3>
                         <div class="image-holder">
                             <img id="modified-image" src="" alt="Modified Image">
                             <svg class="overlay" id="modified-overlay"></svg>
@@ -85,19 +83,17 @@
 
             <div class="answer-key-view" id="answer-key-view" style="display: none;">
                 <h2>Answer Key - Round <span id="answer-key-round">1</span></h2>
-                <p>All differences are highlighted below:</p>
+                <p>All differences are highlighted below. Tap images to zoom.</p>
                 
                 <div class="answer-key-container">
                     <div class="answer-key-images">
                         <div class="answer-image-wrapper">
-                            <h3>Original</h3>
                             <div class="answer-image-holder">
                                 <img id="answer-original-image" src="" alt="Original Image">
                                 <svg class="overlay" id="answer-original-overlay"></svg>
                             </div>
                         </div>
                         <div class="answer-image-wrapper">
-                            <h3>Modified</h3>
                             <div class="answer-image-holder">
                                 <img id="answer-modified-image" src="" alt="Modified Image">
                                 <svg class="overlay" id="answer-modified-overlay"></svg>
